# polars_sim

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE.md  Makefile  README.md  justfile  pyproject.toml  requirements.txt  run.py  test.py
.github/workflows/: CI.yml  polars-compatibility.yml  prepare-release.yml  release.yml
benchmark/: README.md  bench.py  requirements.txt
benchmark/__marimo__/: bench.html
python/polars_sim/: __init__.py
python/polars_sim/dataframe/: join.py
python/polars_simed/: __init__.py
python/polars_simed/dataframe/: join.py
scripts/: get_polars_versions.py  print_test_results.py  run_matrix_tests.sh  test_polars_version.py
src/: cossim.rs  csr.rs  helper.rs  lib.rs
tests/: test_sim.py
