[package]
# It's good practice to make the Rust crate name slightly distinct
# if the Python package name is very similar, to avoid confusion
# if you were to ever publish this crate to crates.io.
name = "polars-simed-rust"  # UPDATED (Suggestion, or keep as "polars-simed" if you prefer, but ensure version and lib.name are correct)
version = "0.3.2"            # UPDATED to match pyproject.toml
edition = "2021"

[lib]

name = "polars_simed_lib"
crate-type = ["cdylib"]
test = true
path = "src/lib.rs"

[dependencies]
itertools = "0.13.0"
lazy_static = "1.5.0"
ngrams = "1.0.1"
num = "0.4.3"
polars = "0.43.1"
polars-core = "0.43.1"
polars-lazy = "0.43.1"
pyo3 = { version = "0.22.3", features = ["extension-module", "abi3-py38"] } # Check PyO3 version compatibility
pyo3-polars = { version = "0.17.0", features = ["derive", "lazy"] }
rayon = "1.10.0"

# Ensure all other dependencies are as intended and versions are appropriate.
