[package]
name = "polars-sim"
version = "0.1.0"
edition = "2021"

[lib]
name = "polars_sim"
crate-type = ["cdylib"]
test = true
path = "src/lib.rs"

[dependencies]
itertools = "0.13.0"
lazy_static = "1.5.0"
ngrams = "1.0.1"
num = "0.4.3"
# see https://github.com/pola-rs/polars/issues/25148 for the timezones feature
polars = { version = "0.52.0", features = ["lazy", "timezones"] }
polars-core = "0.52.0"
polars-lazy = "0.52.0"
pyo3 = { version = "0.26.0", features = ["extension-module", "abi3-py38"] }
pyo3-ffi = "0.26.0"
pyo3-polars = { version = "0.25.0", features = ["derive", "lazy"] }
rayon = "1.10.0"
